<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Events Core Lib</string>
    <string name="title_activity_events_stream">Events</string>
    <string name="title_activity_event_detail">Events</string>
    <string name="title_activity_map">Map</string>
    <string name="title_fragment_events_stream">Stream</string>
    <string name="loading">Loading…</string>
    <string name="error_message">Oops, something failed :(</string>
    <string name="action_settings">Settings</string>
    <string name="preference_user_first_name">preference_user_first_name</string>
    <string name="preference_user_last_name">preference_user_last_name</string>
    <string name="preference_user_email">preference_user_email</string>
    <string name="preference_user_occupation_name">preference_user_occupation_name</string>
    <string name="preference_user_phone">preference_user_phone</string>
    <string name="preference_user_country">preference_user_country</string>
    <string name="preference_user_city">preference_user_city</string>
    <string name="preference_user_english_knowledge">preference_user_english_knowledge</string>
    <string name="preference_user_picture">preference_user_picture</string>
    <string name="preference_user_is_glober">preference_user_is_glober</string>
    <string name="name_baudo">Paula Veronica Baudo</string>
    <string name="mail_baudo">paula.baudo@globant.com</string>
    <string name="name_burgos">David Alejandro Burgos Rodas</string>
    <string name="mail_burgos">david.burgos@globant.com</string>
    <string name="name_cattaneo">Ariel Cattáneo</string>
    <string name="mail_cattaneo">ariel.cattaneo@globant.com</string>
    <string name="name_cavallo">Micaela Sofía Cavallo</string>
    <string name="mail_cavallo">micaela.cavallo@globant.com</string>
    <string name="name_gonzalez">Juan Cruz Gonzalez Soler</string>
    <string name="mail_gonzalez">juan.soler@globant.com</string>
    <string name="name_gugliotta">Agustin Gugliotta</string>
    <string name="mail_gugliotta">agustin.gugliotta@globant.com</string>
    <string name="name_lodi">Gonzalo Lodi</string>
    <string name="mail_lodi">gonzalo.lodi@globant.com</string>
    <string name="name_madina">Agustin Madina</string>
    <string name="mail_madina">agustin.madina@globant.com</string>
    <string name="name_pena">Fernando Peña</string>
    <string name="mail_pena">fernando.pena@globant.com</string>
    <string name="name_ramirez">Juan Guillermo Ramírez Chica</string>
    <string name="mail_ramirez">juan.ramirez@globant.com</string>
    <string name="we_are_ready">We are ready!</string>
    <string name="credits_fragment_title">Credits</string>
    <string name="action_done">Done</string>
    <string name="preference_user_twitter">preference_user_twitter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speaker_detail_fragment">Description</string>
    <string name="checkin_successfully">Check-in Successful</string>
    <string name="no_connection">No Connection</string>
    <string name="textView_Event_Start_Title">Starts</string>
    <string name="textView_Event_End_Title">Ends</string>
    <string name="textView_Event_Address_Title">Address</string>
    <string name="textView_Event_City_Title">City</string>
    <string name="textView_Event_Country_Title">Country</string>
    <string name="textView_Event_Language_Title">Event language</string>
    <string name="texView_Add_Info_Title">Additional info</string>
    <string name="textView_Event_Desc_Title">Description</string>
    <string name="title_activity_base_pager_acivity">BasePagerAcivity</string>
    <string name="action_credits">Credits</string>
    <string name="title_activity_credits">Credits</string>
    <string name="edit_text_first_name_hint">First name</string>
    <string name="edit_text_last_name_hint">Last name</string>
    <string name="edit_text_phone_hint">Phone</string>
    <string name="edit_text_biography_hint">Biography</string>
    <string name="edit_text_email_hint">Email</string>
    <string name="edit_text_twitter_hint">Twitter user</string>
    <string name="edit_text_occupation_hint">Occupation</string>
    <string name="edit_text_country_hint">Country</string>
    <string name="edit_text_city_hint">City</string>
    <string name="check_box_text_english_hint">Need english translator?</string>
    <string name="action_checkin">Check-in</string>
    <string name="editText_twitter_what_is_happening">What\'s happening?</string>
    <string name="tweet_success">You are a RockStar!</string>
    <string name="tweet_failure">Try again or check your connection</string>
    <string name="button_login_twitter">LOGIN USING TWITTER</string>
    <string name="button_tweet">TWEET!</string>
    <string name="general_hashtag">#GlobantEvents </string>
    <string name="twitter_username">\@%s</string>
    <string name="placeholder_twitter_username">\@username</string>
    <string name="title_activity_tweet">TweetActivity</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_speaker_detail">Speaker</string>
    <string name="action_map">Map</string>
    <string name="checkin_error">The subscriber email doesn\'t exist.</string>
    <string name="field_required">*Required</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_subscriber">Subscriber</string>
    <string name="email_required">*Email not valid</string>
    <string name="title_base_activity_twitter">Tweet event</string>
    <string name="title_fragment_tweet">Tweet</string>
    <string name="title_fragment_tweets_stream">Twitter</string>
    <string name="title_page_description">Description</string>
    <string name="title_page_participants">Participants</string>
    <string name="title_page_speakers">Speakers</string>
    <string name="title_page_twitter">Twitter</string>
    <string name="tweet_checkin">I\'m at</string>
    <string name="edit_text_title_hint">Title</string>
    <string name="edit_text_hint_name">Name</string>
    <string name="title_activity_speaker">SpeakerActivity</string>
    <string name="missing_fields">Required fields missing!</string>
    <string name="profile_saved">Profile updated!</string>
    <string name="title_fragment_subscriber">Profile</string>
    <string name="title_activity_base_speaker">BaseSpeakerActivity</string>
    <string name="title_base_speaker_list_fragment">Speakers</string>
    <string name="simple_date_format_complete_date">MMM, dd yyyy HH:mm z</string>
    <string name="simple_date_format_date">MMM, dd yyyy</string>
    <string name="simple_date_format_hour">HH:mm z</string>
    <string name="missing_photo">Take a picture right now!</string>
    <string name="button_send_notification">Send</string>
    <string name="button_cancel_notification">Cancel</string>
    <string name="no_speakers">No acknowledged speakers.</string>
    <string name="edit_text_full_description_hint">Full Description</string>
    <string name="edit_text_short_description_hint">Short Description</string>
    <string name="edit_text_end_date_hint">End Date</string>
    <string name="edit_text_start_date_hint">Start Date</string>
    <string name="edit_text_start_time_hint">Start Time</string>
    <string name="edit_text_end_time_hint">End Time</string>
    <string name="edit_text_category_hint">Category</string>
    <string name="text_view_hashtag">Hashtag</string>
    <string name="edit_text_public_hint">Public/Private</string>
    <string name="title_activity_create_events">Create Event</string>
    <string name="title_event_photo">Add an Image</string>
    <string name="button_delete">Delete</string>
    <string name="menu_button_update">Update</string>
    <string name="alert_message_delete_event">Do you really want to delete this event?</string>
    <string name="alert_message_delete_event_title">Delete Event</string>
    <string name="alert_message_delete_speaker">Do you really want to delete this speaker?</string>
    <string name="alert_message_delete_speaker_title">Delete Speaker</string>
    <string name="already_subscribed">You\'re already subscribed to this event.</string>
    <string name="have_been_subscribed">You\'ve been subscribed to this event</string>
    <string name="preference_participant_hint_showed">preference_participant_hint_showed</string>
    <string name="no_tweet_steam">No tweets yet, be the first!</string>
    <string name="text_view_no_participants">No subscribers registered yet.</string>
    <string name="facebook_app_id_client">383225715212960</string>
    <string name="facebook_app_id_manager">449604988548513</string>
    <string name="action_history">History</string>
    <string name="action_share">Share</string>
    <string name="menu_button_notifications">Notifications</string>
    <string name="title_notification_dialog_channel">Choose the channel</string>
    <string name="title_notification_dialog_message">Enter your message</string>
    <string name="notification_attribute_title">title</string>
    <string name="notification_attribute_alert">alert</string>
    <string name="notification_attribute_event">event</string>
    <string name="notification_attribute_id">id</string>
    <string name="channel_everyone">Everyone</string>
    <string name="channel_subscriber">Subscribers</string>
    <string name="prefix_subscriber">SUB-</string>
    <string name="prefix_participants">PAR-</string>
    <string name="prefix_channel">CH-</string>
    <string name="prefix_checkin">CI-</string>
    <string name="query_attribute_channel">channels</string>
    <string name="subs_to_part_title">Hello!</string>
    <string name="notification_event_title">Notification Event</string>
    <string name="notification_broadcast_title">Broadcast Notification</string>
    <string name="preference_time">preference_time</string>
    <string name="dialog_share_via">Share via</string>
    <string name="check_out_event">Check out this event!</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_base_calendar_list">Calendars</string>
    <string name="button_add_to_calendar">ADD TO CALENDAR</string>
    <string name="button_remove_from_calendar">REMOVE FROM CALENDAR</string>
    <string name="button_cancel">Cancel</string>
</resources>
