<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.globant.events.CreditsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/credits_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_baudo"
            style="@style/condensed_normal_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_baudo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/arg_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_baudo_mail"
            style="@style/condensed_light_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mail_baudo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/credits_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_burgos"
            style="@style/condensed_normal_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_burgos"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/col_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_burgos_mail"
            style="@style/condensed_light_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mail_burgos"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/credits_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_cattaneo"
            style="@style/condensed_normal_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_cattaneo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/arg_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_cattaneo_mail"
            style="@style/condensed_light_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mail_cattaneo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/credits_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_cavallo"
            style="@style/condensed_normal_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_cavallo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/arg_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_cavallo_mail"
            style="@style/condensed_light_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mail_cavallo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/credits_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_gonzalez"
            style="@style/condensed_normal_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_gonzalez"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/arg_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_gonzalez_mail"
            style="@style/condensed_light_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mail_gonzalez"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/credits_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_gugliotta"
            style="@style/condensed_normal_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_gugliotta"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/arg_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_gugliotta_mail"
            style="@style/condensed_light_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mail_gugliotta"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/credits_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_lodi"
            style="@style/condensed_normal_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_lodi"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/arg_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_lodi_mail"
            style="@style/condensed_light_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mail_lodi"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/credits_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_madina"
            style="@style/condensed_normal_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_madina"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/arg_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_madina_mail"
            style="@style/condensed_light_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mail_madina"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/credits_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_pena"
            style="@style/condensed_normal_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_pena"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/arg_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_pena_mail"
            style="@style/condensed_light_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mail_pena"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/credits_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_ramirez"
            style="@style/condensed_normal_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_ramirez"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/credits_divider_height"
            android:layout_margin="@dimen/divider_margin"
            android:background="@drawable/col_divider"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_ramirez_mail"
            style="@style/condensed_light_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/mail_ramirez"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_ready"
            style="@style/condensed_normal_extra_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/we_are_ready"
            android:textColor="@color/globant_green"/>

    </LinearLayout>

</ScrollView>
